更换qq群图标

--- a/src/main/resources/templates/apply/index.html
+++ b/src/main/resources/templates/apply/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>智慧体育竞赛</title>
+    <title>智慧体育竞赛报名</title>
     <link rel="stylesheet" href="/static/css/element-ui.css"/>
     <link rel="stylesheet" href="/static/css/apply-index.css"/>
     <script src="/static/js/jquery-3.7.1.min.js"></script>
@@ -10,6 +10,7 @@
     <script src="/static/js/apply-component.js"></script>
     <script src="/static/js/apply-index.js"></script>
     <script src="/static/js/school-value.js"></script>
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div id="app" style="display: none">
