--- a/src/main/resources/templates/apply/login.html
+++ b/src/main/resources/templates/apply/login.html
@@ -11,6 +11,7 @@
     <script src="/static/js/jquery-3.7.1.min.js"></script>
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/element-ui.js"></script>
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class='container' id='container' style="display: none">
