--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <script src="../static/js/jquery-3.7.1.min.js"></script>
     <script src="../static/js/vue.js"></script>
     <script src="../static/js/element-ui.js"></script>
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
 </head>
 
 
@@ -24,7 +25,7 @@
                 <a href="process.html" class="Menu_item">比赛流程</a>
 
                 <a v-if="isLoggedIn" href="apply/index.html" class="Menu_item">比赛报名</a>
-                <a v-else href="apply/login.html" class="Menu_item">比赛报名</a>
+                <a v-else href="/apply" class="Menu_item">比赛报名</a>
                 <a href="contact.html" class="Menu_item">联系我们</a>
 
                 <a href="download.html" class="Menu_item">资料下载</a>
@@ -32,7 +33,7 @@
             <div class="H_right">
                 <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
                 <a v-if="isLoggedIn" href="apply/index.html">个人中心</a>
-                <a v-else href="apply/login.html">登录/注册</a>
+                <a v-else href="/apply">登录/注册</a>
             </div>
         </div>
     </div>
@@ -65,7 +66,7 @@
                     提升体育参与者运动体验感，保障其运动质量。为引导激励我校学生积极响应创新创造的时代号召，
                     激发大学生从事科学研究与探索的兴趣和潜能以及对体育的热爱，倡导理论联系实际、求真务实的学风和团队协作的人文精神，
                     提升我校学生的创新能力、实践能力、协作精神、科学和身体素质，培养更多人工智能领域和工程项目所需人才，
-                    河南大学智慧网络研究院和河南众知物科技有限公司定于XXXX年XX月XX日至XX日在河南大学(金明校区)，
+                    河南大学智慧网络研究院和河南众知物科技有限公司定于2023年11月13日至12月29日在河南大学(金明校区)，
                     举办河南大学大学生智慧体育竞赛。
                 </div>
             </div>
@@ -87,30 +88,30 @@
                     <div style="margin-bottom:20px;font-size:25px;">赛事安排</div>
                 </div>
                 <div class="time_Data">
-                    <div class="Data_item">2023-11-16</div>
-                    <div class="Data_item">2023-11-01</div>
-                    <div class="Data_item">2023-11-01</div>
-                    <div class="Data_item">2023-11-01</div>
+                    <div class="Data_item">2023-11-13</div>
+                    <div class="Data_item">2023-12-15</div>
+                    <div class="Data_item">2023-12-29</div>
+                    <div class="Data_item">2024-01-07</div>
                 </div>
                 <div class="time_con">
                     <div >
                         <el-steps :space="300" :active="computedActive" finish-status="success" align-center>
-                            <el-step title="比赛报名" description="这是一段很长很长很长的描述性文字" style="width: 600px;cursor: pointer">
+                            <el-step title="赛事发布" description="提交赛事内容，展示赛事详情。" style="width: 600px;cursor: pointer">
                                 <template slot="icon" >
                                     <img  style="width: 30px;height: 30px" src="../static/img/sign.png" >
                                 </template>
                             </el-step>
-                            <el-step title="比赛进行" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                            <el-step title="比赛报名" description="团队根据赛事规则和比赛分类选择自己团队的参赛分类并在网站的报名系统中进行报名。" style="cursor: pointer">
                                 <template slot="icon" >
                                     <img  style="width: 20px;height: 20px" src="../static/img/ing.png" >
                                 </template>
                             </el-step>
-                            <el-step title="评委评选" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                            <el-step title="作品提交" description="在报名系统中，将自己的参赛作品进行提交。" style="cursor: pointer">
                                 <template slot="icon" >
                                     <img  style="width: 27px;height: 27px" src="../static/img/evaluate.png" >
                                 </template>
                             </el-step>
-                            <el-step title="获奖排名" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                            <el-step title="评委评选" description="评委对所有团队提交的作品进行评估打分，选定获奖团队。" style="cursor: pointer">
                                 <template slot="icon" >
                                     <img  style="width: 30px;height: 30px" src="../static/img/champion.png" >
                                 </template>
@@ -177,7 +178,7 @@
     </div><BR><BR>
     <div class="button-center">
         <a v-if="isLoggedIn" href="apply/index.html" class="registration_button">比赛报名</a>
-        <a v-else href="apply/login.html" class="registration_button">比赛报名</a>
+        <a v-else href="/apply" class="registration_button">比赛报名</a>
     </div><BR><BR><BR><BR>
 
     <div class="foot">
@@ -185,13 +186,14 @@
             <div class="link">
                 <h2>友情链接</h2>
                 <p><a href="https://www.henu.edu.cn/" style="text-decoration: none; color: inherit;">河南大学</a></p>
-                <p>主办单位：<a href="https://software.henu.edu.cn/" style="text-decoration: none; color: inherit;">河南大学软件学院</a></p>
-                <p>承办单位：河南大学智慧网络研究院&nbsp;<a href="https://www.hnzzw.com/" style="text-decoration: none; color: inherit;">河南众知物科技有限公司</a></p>
+                <p>主办单位：<a href="https://henu.goworkla.cn/" style="text-decoration: none; color: inherit;">河南大学就业创业指导中心</a></p>
+                <p>承办单位：<a href="https://software.henu.edu.cn/" style="text-decoration: none; color: inherit;">河南大学软件学院</a></p>
+                <p>支持单位：河南众知物科技有限公司&nbsp;&nbsp;&nbsp;河南大学数字体育协同创新中心</a></p>
             </div>
             <div class="aboutus">
                 <h2>联系方式</h2>
-                <p>报名：16666666666</p>
-                <p>邮箱：111111111@qq.com</p>
+                <p>报名：19513359603</p>
+                <p>邮箱：364299279@qq.com</p>
                 <p>地址：河南省开封市龙亭区东京大道河南大学</p>
             </div>
             <div class="pic_font">
@@ -241,10 +243,10 @@
         computed: {
             computedActive() {
                 const currentLocalTime = new Date();
-                const step1StartTime = new Date('2023-11-16T00:00:00'); // Replace with your start time
-                const step2StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
-                const step3StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
-                const step4StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
+                const step1StartTime = new Date('2023-11-13T00:00:00'); // Replace with your start time
+                const step2StartTime = new Date('2023-12-15T00:00:00'); // Replace with your start time
+                const step3StartTime = new Date('2023-12-29T00:00:00'); // Replace with your start time
+                const step4StartTime = new Date('2023-01-07T00:00:00'); // Replace with your start time
                 // Add more steps as needed
                 const stripTime = (date) => new Date(date.getFullYear(), date.getMonth(), date.getDate());
 
