--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -27,7 +27,7 @@
         <a href="index.html" class="Menu_item">网站首页</a>
         <a href="process.html" class="Menu_item">比赛流程</a>
 
-        <a v-if="isLoggedIn" href="apply/index.html" class="Menu_item">比赛报名</a>
+        <a v-if="isLoggedIn" href="/apply" class="Menu_item">比赛报名</a>
         <a v-else href="/apply" class="Menu_item">比赛报名</a>
 
         <a href="contact.html" class="Menu_item">联系我们</a>
@@ -35,7 +35,7 @@
       </div>
       <div class="H_right">
         <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
-        <a v-if="isLoggedIn" href="apply/index.html">个人中心</a>
+        <a v-if="isLoggedIn" href="/apply">个人中心</a>
         <a v-else href="/apply">登录/注册</a>
       </div>
     </div>
@@ -105,6 +105,28 @@
 <script>
   var Main = {
     data() {
+      var data=false;
+      $.ajax({
+        type: 'GET', // 规定请求的类型（GET 或 POST）
+        url: '/user/isLogin', // 请求的url地址
+        dataType: 'json', //预期的服务器响应的数据类型
+        async:false,
+        beforeSend: function () { //发送请求前运行的函数（发送之前就会进入这个函数）
+
+        },
+        success: function (result) { // 当请求成功时运行的函数
+          if (result.code!=200){
+            alert(result.msg);
+          }else{
+            data=result.data;
+          }
+        },
+        error: function (result) { //失败的函数
+
+        },
+        complete: function () { //请求完成时运行的函数（在请求成功或失败之后均调用，即在 success 和 error 函数之后，不管成功还是失败 都会进这个函数）
+        }
+      });
       return {
         activeIndex: '1',
         isLoggedIn: false,//判断是否登录参数
