--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -24,7 +24,7 @@
         <a href="index.html" class="Menu_item">网站首页</a>
         <a href="process.html" class="Menu_item">比赛流程</a>
 
-        <a v-if="isLoggedIn" href="apply/index.html" class="Menu_item">比赛报名</a>
+        <a v-if="isLoggedIn" href="/apply" class="Menu_item">比赛报名</a>
         <a v-else href="/apply" class="Menu_item">比赛报名</a>
 
         <a href="contact.html" class="Menu_item">联系我们</a>
@@ -32,7 +32,7 @@
       </div>
       <div class="H_right">
         <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
-        <a v-if="isLoggedIn" href="apply/index.html">个人中心</a>
+        <a v-if="isLoggedIn" href="/apply">个人中心</a>
         <a v-else href="/apply">登录/注册</a>
       </div>
     </div>
