--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -93,7 +93,7 @@
         <h2>联系方式</h2>
         <p>报名：19513359603</p>
         <p>邮箱：364299279@qq.com</p>
-        <p>地址：河南省开封市龙亭区东京大道河南大学</p>
+        <p>地址：河南省开封市龙亭区今明大道河南大学</p>
       </div>
       <div class="pic_font">
         <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
