--- a/src/main/resources/static/css/new_index.css
+++ b/src/main/resources/static/css/new_index.css
@@ -263,6 +263,7 @@ a{
     color: black;
 }
 .logo{
+    display: flex;
     width: 360px;
     height: 70px;
     color: #333333;
@@ -272,17 +273,27 @@ a{
     margin-top: 13px;
     cursor:pointer;
 }
+.logo_word{
+    /*display: inline-block;*/
+    line-height: 30px;
+    margin-left: 5px;
+    margin-top: 7px;
+    width:300px;
+    height:80px;
+    font-family: '微软雅黑 Light';
+}
 .H_middle{
-    width:1000px;
+    width:1300px;
     height:70px;
     line-height:70px;
     /*margin:0 auto;*/
     display:flex;
-    margin-left: 100px;
+    /*margin-left: 100px;*/
 }
 .H_left{
     display:flex;
     margin:0 auto;
+    width: 800px;
 }
 
 .Menu_item{
@@ -341,10 +352,15 @@ width: 100%;
 height: 550px;
 display: block;
 }
-.Top_word{
+.top_word{
     position: absolute;
     top: 12%;
     left: 75%;
+}
+.Top_word{
+    /*position: absolute;*/
+    /*top: 12%;*/
+    /*left: 75%;*/
     transform: translateX(-50%);
     background-color: transparent;
     color: white;
@@ -352,16 +368,16 @@ display: block;
     user-select: none;
     font-family: "阿里妈妈东方大楷 Regular";
     font-weight: bold;
-    text-align: center;
+    /*text-align: center;*/
     font-size: 55px;
     white-space: nowrap;
     -webkit-animation: text-focus-in 2s ;
     animation: text-focus-in 2s ;
 }
 .Top_word2{
-    position: absolute;
-    top: 26%;
-    left: 1160px;
+    /*position: absolute;*/
+    /*top: 26%;*/
+    /*left: 76.4%;*/
     transform: translateX(-50%);
     background-color: transparent;
     color: white;
@@ -369,7 +385,7 @@ display: block;
     user-select: none;
     font-family: "微软雅黑";
     font-weight: bolder;
-    text-align: center;
+    /*text-align: center;*/
     font-size: 35px;
     color: #0086b3;
     white-space: nowrap;
@@ -377,9 +393,9 @@ display: block;
     animation: text-focus-in 2s ;
 }
 .Top_word3{
-    position: absolute;
-    top: 35%;
-    left: 1078px;
+    /*position: absolute;*/
+    /*top: 35%;*/
+    /*left: 71%;*/
     transform: translateX(-50%);
     background-color: transparent;
     color: white;
@@ -387,7 +403,7 @@ display: block;
     user-select: none;
     font-family: "微软雅黑";
     font-weight: bold;
-    text-align: center;
+    /*text-align: center;*/
     font-size: 35px;
     color: #0086b3;
     white-space: nowrap;
@@ -584,6 +600,10 @@ display: block;
 }
 .Four{
     margin: 20px auto;
+    width:1500px;
+}
+.Four_d{
+    margin: 30px auto;
     width:1500px;
 }
 .pr_pic{
