--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -20,7 +20,7 @@
   <div class="Header">
     <div class="logo">
       <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
+      <div class="logo_word">河南大学智慧篮球竞赛</div>
     </div>
     <div class="H_middle">
       <div class="H_left">
@@ -44,9 +44,11 @@
   <!--头部-->
   <div class="Top">
     <img src="../static/img/basketbanner.jpg" >
-    <div class="Top_word">河南大学智慧篮球竞赛</div>
-    <div class="Top_word2">时间：2023年11月13日—12月29日</div>
-    <div class="Top_word3">地点：河南大学(金明校区)</div>
+    <div class="top_word">
+      <div class="Top_word">河南大学智慧篮球竞赛</div>
+      <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+      <div class="Top_word3">地点：河南大学(金明校区)</div>
+    </div>
   </div>
 
   <div style=" margin-top: 24px;">
