--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -17,7 +17,7 @@
   <div class="Header">
     <div class="logo">
       <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
+      <div class="logo_word">河南大学智慧篮球竞赛</div>
     </div>
     <div class="H_middle">
       <div class="H_left">
@@ -41,12 +41,60 @@
   <!--头部-->
   <div class="Top">
     <img src="../static/img/basketbanner.jpg" >
-    <div class="Top_word">河南大学智慧篮球竞赛</div>
-    <div class="Top_word2">时间：2023年11月13日—12月29日</div>
-    <div class="Top_word3">地点：河南大学(金明校区)</div>
+    <div class="top_word">
+      <div class="Top_word">河南大学智慧篮球竞赛</div>
+      <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+      <div class="Top_word3">地点：河南大学(金明校区)</div>
+    </div>
   </div>
 
-  <button class="download-button" @click="downloadFile">下载文件</button><BR><BR><BR><BR><BR><BR>
+<!--  <button class="download-button" @click="downloadFile">下载文件</button><BR><BR><BR><BR><BR><BR>-->
+
+  <div class="Big">
+    <div class="Four_d">
+      <!-- 项目分类图片 -->
+      <div class="pr_pic">
+        <div class="game_item">
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/tinyweixin.png">
+            <div>小程序开发</div>
+          </a>
+        </div>
+        <div class="game_item" >
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/web1.jpg">
+            <div>WEB开发</div>
+          </a>
+        </div>
+        <div class="game_item">
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/Android1.png">
+            <div>安卓/IOS开发</div>
+          </a>
+        </div>
+      </div>
+      <div class="pr_pic">
+        <div class="game_item">
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/facedetect1.png">
+            <div>人脸识别替换</div>
+          </a>
+        </div>
+        <div class="game_item">
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/posedetect1.jpg">
+            <div>实时体育动作识别</div>
+          </a>
+        </div>
+        <div class="game_item">
+          <a href="process.html" style="color: black;">
+            <img src="../static/img/3Dpose1.jpg">
+            <div>三维人体重建</div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div><BR><BR>
 
   <div class="foot">
     <div class="f_con">
