--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     <div class="Header">
         <div class="logo">
             <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-            <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
+            <div class="logo_word">河南大学智慧篮球竞赛</div>
         </div>
         <div class="H_middle">
             <div class="H_left">
@@ -42,9 +42,11 @@
     <!--头部-->
     <div class="Top">
         <img src="../static/img/basketbanner.jpg" >
-        <div class="Top_word">河南大学智慧篮球竞赛</div>
-        <div class="Top_word2">时间：2023年11月13日—12月29日</div>
-        <div class="Top_word3">地点：河南大学(金明校区)</div>
+        <div class="top_word">
+            <div class="Top_word">河南大学智慧篮球竞赛</div>
+            <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+            <div class="Top_word3">地点：河南大学(金明校区)</div>
+        </div>
     </div>
 
     <!--  比赛介绍  -->
@@ -164,7 +166,7 @@
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
                         <img src="../static/img/posedetect1.jpg">
-                        <div>实时姿态估计</div>
+                        <div>实时体育动作识别</div>
                     </a>
                 </div>
                 <div class="game_item">
@@ -266,7 +268,7 @@
         computed: {
             computedActive() {
                 const currentLocalTime = new Date();
-                const step1StartTime = new Date('2023-11-13T00:00:00'); // Replace with your start time
+                const step1StartTime = new Date('2023-11-21T00:00:00'); // Replace with your start time
                 const step2StartTime = new Date('2023-12-15T00:00:00'); // Replace with your start time
                 const step3StartTime = new Date('2023-12-29T00:00:00'); // Replace with your start time
                 const step4StartTime = new Date('2023-01-07T00:00:00'); // Replace with your start time
