--- a/src/main/resources/static/css/new_index.css
+++ b/src/main/resources/static/css/new_index.css
@@ -2,7 +2,6 @@ html, body {
     padding: 0px;
     margin: 0px;
     height: 100%;
-
 }
 #app{
     height: 100%;
@@ -593,6 +592,7 @@ display: block;
     width:780px;
 }
 .Big{
+    margin-top: 130px;
     width:100%;
     height:1080px;
     background:url('../img/EmeraldWater.jpg') no-repeat;
