--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,13 +22,13 @@
         <div class="H_middle">
             <div class="H_left">
                 <a href="index.html" class="Menu_item">网站首页</a>
-                <a href="process.html" class="Menu_item">比赛流程</a>
+                <a href="process.html" class="Menu_item">比赛介绍</a>
 
                 <a v-if="isLoggedIn" href="/apply" class="Menu_item">比赛报名</a>
                 <a v-else href="/apply" class="Menu_item">比赛报名</a>
                 <a href="contact.html" class="Menu_item">联系我们</a>
 
-                <a href="download.html" class="Menu_item">资料下载</a>
+                <a href="download.html" class="Menu_item">比赛章程</a>
             </div>
             <div class="H_right">
                 <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
