--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -138,19 +138,19 @@
             <!-- 项目分类图片 -->
             <div class="pr_pic">
                 <div class="game_item">
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/tinyweixin.png">
                         <div>小程序开发</div>
                     </a>
                 </div>
                 <div class="game_item" >
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/web1.jpg">
                         <div>WEB开发</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/Android1.png">
                         <div>安卓/IOS开发</div>
                     </a>
@@ -158,19 +158,19 @@
             </div>
             <div class="pr_pic">
                 <div class="game_item">
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/facedetect1.png">
                         <div>人脸识别替换</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/posedetect1.jpg">
                         <div>实时体育动作识别</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="process.html" style="color: black;">
+                    <a href="download.html" style="color: black;">
                         <img src="../static/img/3Dpose1.jpg">
                         <div>三维人体重建</div>
                     </a>
