更换部分图片，调整页面比例，添加资料下载链接。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,19 +140,19 @@
                 <div class="game_item">
                     <a href="download.html" style="color: black;">
                         <img src="../static/img/tinyweixin.png">
-                        <div>小程序开发</div>
+                        <div style="margin-top: -3px">小程序开发</div>
                     </a>
                 </div>
                 <div class="game_item" >
                     <a href="download.html" style="color: black;">
                         <img src="../static/img/web1.jpg">
-                        <div>WEB开发</div>
+                        <div style="margin-top: -3px">WEB开发</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="download.html" style="color: black;">
-                        <img src="../static/img/Android1.png">
-                        <div>安卓/IOS开发</div>
+                        <img src="../static/img/Android.jpg">
+                        <div style="margin-top: -3px">安卓/IOS开发</div>
                     </a>
                 </div>
             </div>
@@ -160,19 +160,19 @@
                 <div class="game_item">
                     <a href="download.html" style="color: black;">
                         <img src="../static/img/facedetect1.png">
-                        <div>人脸识别替换</div>
+                        <div style="margin-top: -3px">人脸识别替换</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="download.html" style="color: black;">
                         <img src="../static/img/posedetect1.jpg">
-                        <div>实时体育动作识别</div>
+                        <div style="margin-top: -3px">实时体育动作识别</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="download.html" style="color: black;">
                         <img src="../static/img/3Dpose1.jpg">
-                        <div>三维人体重建</div>
+                        <div style="margin-top: -3px">三维人体重建</div>
                     </a>
                 </div>
             </div>
