--- a/src/main/resources/static/css/new_index.css
+++ b/src/main/resources/static/css/new_index.css
@@ -1,6 +1,10 @@
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
 html, body {
-    padding: 0px;
-    margin: 0px;
     height: 100%;
 }
 #app{
@@ -592,6 +596,13 @@ display: block;
     width:780px;
 }
 .Big{
+    margin-top: 40px;
+    width:100%;
+    height:1080px;
+    background:url('../img/EmeraldWater.jpg') no-repeat;
+    background-size:100% 100%;
+}
+.Big2{
     margin-top: 130px;
     width:100%;
     height:1080px;
