修改错别字，调整首页项目分类跳转。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -138,19 +138,19 @@
             <!-- 项目分类图片 -->
             <div class="pr_pic">
                 <div class="game_item">
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/tinyweixin.png">
                         <div style="margin-top: -3px">小程序开发</div>
                     </a>
                 </div>
                 <div class="game_item" >
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/web1.jpg">
                         <div style="margin-top: -3px">WEB开发</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/Android.jpg">
                         <div style="margin-top: -3px">安卓/IOS开发</div>
                     </a>
@@ -158,19 +158,19 @@
             </div>
             <div class="pr_pic">
                 <div class="game_item">
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/facedetect1.png">
                         <div style="margin-top: -3px">人脸识别替换</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/posedetect1.jpg">
                         <div style="margin-top: -3px">实时体育动作识别</div>
                     </a>
                 </div>
                 <div class="game_item">
-                    <a href="download.html" style="color: black;">
+                    <a href="process.html" style="color: black;">
                         <img src="../static/img/3Dpose1.jpg">
                         <div style="margin-top: -3px">三维人体重建</div>
                     </a>
@@ -196,7 +196,7 @@
                 <h2>联系方式</h2>
                 <p>报名：19513359603</p>
                 <p>邮箱：364299279@qq.com</p>
-                <p>地址：河南省开封市龙亭区今明大道河南大学</p>
+                <p>地址：河南省开封市龙亭区金明大道河南大学</p>
             </div>
             <div class="pic_font">
                 <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
